2013-05-21  Zan Dobersek  <zdobersek@igalia.com>

        PLATFORM(*) macros used in Source/WebCore/loader/archive/ArchiveFactory.cpp
        https://bugs.webkit.org/show_bug.cgi?id=116453

        Reviewed by Alexey Proskuryakov.

        * loader/archive/ArchiveFactory.cpp: Remove a redundant PLATFORM(QT) macro when checking whether
        to include the LegacyWebArchive.h header that's specific to the WebArchive support. The Qt port
        does not enable the WebArchive feature at all (which is enabled only on AppleMac, AppleWin and iOS
        platforms) so there's no reason to additionally condition the header include with building on
        non-Qt platforms.

2013-05-21  Alberto Garcia  <agarcia@igalia.com>

        Add BlackBerry definition of NativeImagePtr
        https://bugs.webkit.org/show_bug.cgi?id=116526

        Reviewed by Darin Adler.

        * platform/graphics/NativeImagePtr.h:
        (Graphics):
        (WebCore):

2013-05-21  Alberto Garcia  <agarcia@igalia.com>

        [BlackBerry] FontCache::getFontDataForCharacters() returns nullptr
        https://bugs.webkit.org/show_bug.cgi?id=116529

        Reviewed by Andreas Kling.

        This cannot be converted to a PassRefPtr and breaks the build.

        * platform/graphics/blackberry/FontCacheBlackBerry.cpp:
        (WebCore::FontCache::getFontDataForCharacters):

2013-05-21  Iago Toral Quiroga  <itoral@igalia.com>

        [GTK] Always use EGL to create the GL context when running on Wayland
        https://bugs.webkit.org/show_bug.cgi?id=115721

        Reviewed by Martin Robinson.

        * platform/graphics/cairo/GLContext.cpp:
        (WebCore::GLContext::createContextForWindow):
        (WebCore::GLContext::createOffscreenContext): Always use EGL to create the GL context
        instead of GLX when running on Wayland and make createOffScreenContext reuse the code
        in createContextWindow.

2013-05-21  Alberto Garcia  <agarcia@igalia.com>
