@@ -98,10 +98,6 @@ public:
     // while painting.
     virtual void verifyNotPainting() { }
 #endif
-
-#if PLATFORM(BLACKBERRY)
-    virtual bool contentsVisible(const GraphicsLayer*, const IntRect& contentRect) const { return false; }
-#endif
 };
 
 } // namespace WebCore
